--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,24 +15,26 @@ jobs:
     strategy:
       matrix:
         include:
-          # Linux
+          # Linux x86_64
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-            archive: tar.gz
+            cross: false
+          # Linux ARM64 (use cross for OpenSSL)
           - target: aarch64-unknown-linux-gnu
             os: ubuntu-latest
-            archive: tar.gz
-          # macOS
+            cross: true
+          # macOS Intel
           - target: x86_64-apple-darwin
-            os: macos-latest
-            archive: tar.gz
+            os: macos-13
+            cross: false
+          # macOS Apple Silicon
           - target: aarch64-apple-darwin
             os: macos-latest
-            archive: tar.gz
+            cross: false
           # Windows
           - target: x86_64-pc-windows-msvc
             os: windows-latest
-            archive: zip
+            cross: false
 
     steps:
       - uses: actions/checkout@v4
@@ -42,36 +44,35 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Install cross-compilation tools
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu
+      - name: Install cross
+        if: matrix.cross
+        run: cargo install cross --git https://github.com/cross-rs/cross
 
-      - name: Build
+      - name: Build with cross
+        if: matrix.cross
+        run: cross build --release --target ${{ matrix.target }}
+
+      - name: Build with cargo
+        if: ${{ !matrix.cross }}
         run: cargo build --release --target ${{ matrix.target }}
-        env:
-          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
 
       - name: Package (Unix)
         if: matrix.os != 'windows-latest'
         run: |
           cd target/${{ matrix.target }}/release
           tar czf ../../../krusty-${{ matrix.target }}.tar.gz krusty
-          cd ../../..
 
       - name: Package (Windows)
         if: matrix.os == 'windows-latest'
         run: |
           cd target/${{ matrix.target }}/release
           7z a ../../../krusty-${{ matrix.target }}.zip krusty.exe
-          cd ../../..
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: krusty-${{ matrix.target }}
-          path: krusty-${{ matrix.target }}.${{ matrix.archive }}
+          path: krusty-${{ matrix.target }}.*
 
   release:
     name: Create Release
